--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,13 @@
+<!--
+ * @Author: hidari
+ * @Date: 2022-04-13 17:36:23
+ * @LastEditors: hidari
+ * @LastEditTime: 2022-04-25 15:08:05
+ * @FilePath: \shopping-centre-management\public\index.html
+ * @Description: 入口html
+ * 
+ * Copyright (c) 2022 by hidari, All Rights Reserved. 
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -14,5 +24,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="http://connect.qq.com/qc_jssdk.js" data-appid="100556005" data-redirecturi="http://www.corho.com:8080/#/login/callback"></script>
   </body>
 </html>
