--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Author: hidari
  * @Date: 2022-04-13 17:36:23
  * @LastEditors: hidari
- * @LastEditTime: 2022-04-25 15:08:05
+ * @LastEditTime: 2022-04-29 16:18:10
  * @FilePath: \shopping-centre-management\public\index.html
  * @Description: 入口html
  * 
@@ -23,6 +23,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <div id="dailog"></div>
     <!-- built files will be auto injected -->
     <script src="http://connect.qq.com/qc_jssdk.js" data-appid="100556005" data-redirecturi="http://www.corho.com:8080/#/login/callback"></script>
   </body>
